Создано с помощью Colaboratory

--- a/daphne.ipynb
+++ b/daphne.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN0x1HduTLDTYVfd3LCyytF",
+      "authorship_tag": "ABX9TyPEcMSz77REogf9fudjr3n+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,99 +29,109 @@
     {
       "cell_type": "code",
       "source": [
-        "!pwd"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "OShF30J19xiC",
-        "outputId": "a27f38cb-e9ff-419c-d74e-5de1bebbfb64"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "!pip install django\n",
         "!pip install daphne"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "skPUwVny9bkp",
-        "outputId": "bd92bd8c-f13d-487d-b0d1-64d15977814d"
+        "id": "skPUwVny9bkp"
       },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: django in /usr/local/lib/python3.10/dist-packages (5.0.3)\n",
-            "Requirement already satisfied: asgiref<4,>=3.7.0 in /usr/local/lib/python3.10/dist-packages (from django) (3.8.1)\n",
-            "Requirement already satisfied: sqlparse>=0.3.1 in /usr/local/lib/python3.10/dist-packages (from django) (0.4.4)\n",
-            "Requirement already satisfied: typing-extensions>=4 in /usr/local/lib/python3.10/dist-packages (from asgiref<4,>=3.7.0->django) (4.10.0)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 2,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "qgSS2bV07TY0",
-        "outputId": "b2833ab8-772f-437a-edae-7283cef4ac36"
+        "id": "qgSS2bV07TY0"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[31;1mCommandError: '/content/hello_world' already exists\n",
-            "\u001b[0m"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "!django-admin startproject hello_world"
+        "!django-admin startproject hello_world\n",
+        "!mkdir ./hello_world/templates\n",
+        "!mkdir ./hello_world/static/\n",
+        "!mkdir ./hello_world/static/css"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "%cd hello_world/"
+        "template = \"\"\"{% load static %}\n",
+        "\n",
+        "<!DOCTYPE html>\n",
+        "<html lang=\"en\">\n",
+        "<head>\n",
+        "    <meta charset=\"UTF-8\">\n",
+        "    <title>Hello World</title>\n",
+        "    <link rel=\"stylesheet\" href=\"{% static 'css/style.css' %}\">\n",
+        "</head>\n",
+        "<body>\n",
+        "    <h1>Hello World!</h1>\n",
+        "</body>\n",
+        "</html>\n",
+        "\n",
+        "\"\"\"\n",
+        "with open('./hello_world/templates/hello_world.html', 'w') as t:\n",
+        "    t.write(template)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "erFu-tdd-p_a",
-        "outputId": "5e1f4a67-4ecc-47c8-d398-8275e1d9cac0"
+        "id": "sIivEy7MHt0F"
       },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/hello_world\n"
-          ]
-        }
-      ]
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "style = \"\"\"h1 {\n",
+        "    color: red;\n",
+        "}\n",
+        "\"\"\"\n",
+        "with open('./hello_world/static/css/style.css', 'w') as s:\n",
+        "    s.write(style)"
+      ],
+      "metadata": {
+        "id": "_QVKOW0KNZ0y"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "view = \"\"\"\n",
+        "from django.shortcuts import render\n",
+        "\n",
+        "def hello_world(request):\n",
+        "    return render(request, 'hello_world.html')\n",
+        "\"\"\"\n",
+        "with open('./hello_world/hello_world/views.py', 'w') as v:\n",
+        "    v.write(view)"
+      ],
+      "metadata": {
+        "id": "BHpufS1jCYns"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "url = \"\"\"\n",
+        "from django.urls import path\n",
+        "from . import views\n",
+        "\n",
+        "urlpatterns = [\n",
+        "    path('', views.hello_world, name='hello_world'),\n",
+        "]\n",
+        "\"\"\"\n",
+        "with open('./hello_world/hello_world/urls.py', 'w') as u:\n",
+        "    u.write(url)"
+      ],
+      "metadata": {
+        "id": "RQj_8AaVDV-F"
+      },
+      "execution_count": 6,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -135,9 +145,9 @@
           "height": 34
         },
         "id": "jjonxfGW_ZsV",
-        "outputId": "eeb4209d-3fa2-4934-feb1-2a23c99c2822"
+        "outputId": "1b31575e-1935-44a6-a0c2-14bd83e7dd56"
       },
-      "execution_count": 17,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,28 +161,69 @@
     {
       "cell_type": "code",
       "source": [
-        "!daphne hello_world.asgi:app"
+        "%cd hello_world/"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6kas5IofD8Or",
+        "outputId": "095a56b6-2a65-4e4c-bcf4-c09b51d35c77"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/hello_world\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# в settings.py добавить адрес в ALLOWED_HOSTS = ['colab.research.google.com']\n",
+        "# добавить приложение 'hello_world' в INSTALLED_APPS\n",
+        "# добавить 'DIRS': ['templates']"
+      ],
+      "metadata": {
+        "id": "nKvxm555G_KL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!daphne hello_world.asgi:application"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FJJrCLj1-9Iy",
-        "outputId": "497f9a57-268f-4128-9689-fb05bf50e01b"
+        "outputId": "71f26861-16a3-4036-88b4-7f1f37f8605f"
       },
-      "execution_count": 18,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2024-03-30 20:12:21,367 INFO     Starting server at tcp:port=8000:interface=127.0.0.1\n",
-            "2024-03-30 20:12:21,368 INFO     HTTP/2 support not enabled (install the http2 and tls Twisted extras)\n",
-            "2024-03-30 20:12:21,368 INFO     Configuring endpoint tcp:port=8000:interface=127.0.0.1\n",
-            "2024-03-30 20:12:21,369 INFO     Listening on TCP address 127.0.0.1:8000\n",
-            "127.0.0.1:35548 - - [30/Mar/2024:20:12:23] \"GET /\" 200 13\n",
-            "127.0.0.1:35558 - - [30/Mar/2024:20:12:24] \"GET /favicon.ico\" 200 13\n",
-            "2024-03-30 20:12:38,718 INFO     Killed 0 pending application instances\n"
+            "2024-03-30 22:26:27,508 INFO     Starting server at tcp:port=8000:interface=127.0.0.1\n",
+            "2024-03-30 22:26:27,508 INFO     HTTP/2 support not enabled (install the http2 and tls Twisted extras)\n",
+            "2024-03-30 22:26:27,509 INFO     Configuring endpoint tcp:port=8000:interface=127.0.0.1\n",
+            "2024-03-30 22:26:27,509 INFO     Listening on TCP address 127.0.0.1:8000\n",
+            "127.0.0.1:53662 - - [30/Mar/2024:22:26:31] \"GET /\" 200 212\n",
+            "Not Found: /static/css/style.css\n",
+            "2024-03-30 22:26:31,754 WARNING  Not Found: /static/css/style.css\n",
+            "127.0.0.1:53664 - - [30/Mar/2024:22:26:31] \"GET /static/css/style.css\" 404 2167\n",
+            "Not Found: /favicon.ico\n",
+            "2024-03-30 22:26:32,543 WARNING  Not Found: /favicon.ico\n",
+            "127.0.0.1:53670 - - [30/Mar/2024:22:26:32] \"GET /favicon.ico\" 404 2140\n",
+            "2024-03-30 22:27:01,745 INFO     Killed 0 pending application instances\n"
           ]
         }
       ]
